--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,30 +11,42 @@ jobs:
         node-version: [14]
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+
+    - name: [nodejs] Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
         registry-url: "https://registry.npmjs.org"
         always-auth: true
-    - name: Cache .pnpm-store
+
+    - name: [cache] .pnpm-store
       uses: actions/cache@v1
       with:
         path: ~/.pnpm-store
         key: ${{ runner.os }}-node${{ matrix.node-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-    - name: Install pnpm
+
+    - name: [pnpm] download pnpm binary
       run: curl -f https://get.pnpm.io/v6.14.js | node - add --global pnpm@6
-    - name: Install, Build, Test
+
+    - name: [pnpm] configure filter
       run: |
-        pnpm install
-        pnpm -r build
-        pnpm -r test
+        echo "GIT_TAG=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_ENV
+        # echo "filter=[$GIT_TAG]" >> .npmrc
+        pnpm -r --filter=[$GIT_TAG] ls --depth -1
+
+    - name: [pnpm] install, build, test
+      run: |
+        pnpm --filter=...[$GIT_TAG]... install
+        pnpm --filter=...[$GIT_TAG]...  build
+        pnpm --filter=...[$GIT_TAG] test
+
     # - name: Create tags
     #     pnpm -r --filter=image-q --no-bail exec "git tag $(node -e 'pj=require(\'./package.json\');console.log(pj.name+'@'+pj.version')"
     #     git push --follow-tags
-    - name: Publish
+
+    - name: [pnpm] publish
       run: |
-        pnpm -r publish --no-git-checks --access=public
+        pnpm --filter=[$GIT_TAG] publish --no-git-checks --access=public
       env:
         CI: true
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
