--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,43 +10,43 @@ jobs:
       matrix:
         node-version: [14]
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: [nodejs] Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-        registry-url: "https://registry.npmjs.org"
-        always-auth: true
+      - name: [nodejs] Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          registry-url: "https://registry.npmjs.org"
+          always-auth: true
 
-    - name: [cache] .pnpm-store
-      uses: actions/cache@v1
-      with:
-        path: ~/.pnpm-store
-        key: ${{ runner.os }}-node${{ matrix.node-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+      - name: [cache] .pnpm-store
+        uses: actions/cache@v1
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-node${{ matrix.node-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
 
-    - name: [pnpm] download pnpm binary
-      run: curl -f https://get.pnpm.io/v6.14.js | node - add --global pnpm@6
+      - name: [pnpm] download pnpm binary
+        run: curl -f https://get.pnpm.io/v6.14.js | node - add --global pnpm@6
 
-    - name: [pnpm] configure filter
-      run: |
-        echo "GIT_TAG=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_ENV
-        # echo "filter=[$GIT_TAG]" >> .npmrc
-        pnpm -r --filter=[$GIT_TAG] ls --depth -1
+      - name: [pnpm] configure SINCE git ref
+        run: |
+          echo "SINCE=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_ENV
+          # echo "filter=[$SINCE]" >> .npmrc
+          pnpm -r --filter=[$SINCE] ls --depth -1
 
-    - name: [pnpm] install, build, test
-      run: |
-        pnpm --filter=...[$GIT_TAG]... install
-        pnpm --filter=...[$GIT_TAG]...  build
-        pnpm --filter=...[$GIT_TAG] test
+      - name: [pnpm] install, build, test
+        run: |
+          pnpm --filter=...[$SINCE]... install
+          pnpm --filter=...[$SINCE]... build
+          pnpm --filter=...[$SINCE] test
 
-    # - name: Create tags
-    #     pnpm -r --filter=image-q --no-bail exec "git tag $(node -e 'pj=require(\'./package.json\');console.log(pj.name+'@'+pj.version')"
-    #     git push --follow-tags
+      # - name: Create tags
+      #     pnpm -r --filter=image-q --no-bail exec "git tag $(node -e 'pj=require(\'./package.json\');console.log(pj.name+'@'+pj.version')"
+      #     git push --follow-tags
 
-    - name: [pnpm] publish
-      run: |
-        pnpm --filter=[$GIT_TAG] publish --no-git-checks --access=public
-      env:
-        CI: true
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: [pnpm] publish
+        run: |
+          pnpm --filter=[$SINCE] publish --no-git-checks --access=public
+        env:
+          CI: true
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
