--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -11,24 +11,29 @@ jobs:
         node-version: [12, 14, 16]
     steps:
       - uses: actions/checkout@v2
-      - name: [nodejs] Use Node.js ${{ matrix.node-version }}
+
+      - name: '[nodejs] Use Node.js ${{ matrix.node-version }}'
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
           registry-url: "https://registry.npmjs.org"
           always-auth: true
-      - name: [cache] .pnpm-store
+
+      - name: '[cache] .pnpm-store'
         uses: actions/cache@v1
         with:
           path: ~/.pnpm-store
           key: ${{ runner.os }}-node${{ matrix.node-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-      - name: [pnpm] download pnpm binary
+
+      - name: '[pnpm] download pnpm binary'
         run: curl -f https://get.pnpm.io/v6.14.js | node - add --global pnpm@6
-      - name: [pnpm] configure SINCE git ref
+
+      - name: '[pnpm] configure SINCE git ref'
         run: |
           echo "SINCE=origin/main" >> $GITHUB_ENV
           pnpm -r --filter=[$SINCE] ls --depth -1
-      - name: [pnpm] install, build, test
+
+      - name: '[pnpm] install, build, test'
         run: |
           pnpm --filter=...[$SINCE]... install
           pnpm --filter=...[$SINCE]... build
