--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -10,21 +10,42 @@ jobs:
       matrix:
         node-version: [12, 14, 16]
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        registry-url: https://registry.npmjs.org/
-    - name: Cache .pnpm-store
-      uses: actions/cache@v1
-      with:
-        path: ~/.pnpm-store
-        key: ${{ runner.os }}-node${{ matrix.node-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-    - name: Install pnpm
-      run: curl -f https://get.pnpm.io/v6.14.js | node - add --global pnpm@6
-    - name: pnpm Install, Build, Test
-      run: |
-        pnpm install
-        pnpm -r build
-        pnpm -r test
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: '[nodejs] Use Node.js ${{ matrix.node-version }}'
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          registry-url: "https://registry.npmjs.org"
+          always-auth: true
+
+      - name: '[cache] .pnpm-store'
+        uses: actions/cache@v1
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-node${{ matrix.node-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+
+      - name: '[pnpm] download pnpm binary'
+        run: curl -f https://get.pnpm.io/v6.14.js | node - add --global pnpm@6
+
+      - name: '[pnpm] configure SINCE git ref'
+        run: |
+          echo "SINCE=origin/main" >> $GITHUB_ENV
+
+      - name: '[log] SINCE'
+        run: |
+          echo 'SINCE=$SINCE'
+          echo 'Changed projects'
+          pnpm --filter=[$SINCE] ls --depth -1
+          echo 'Changed and dependent projects'
+          pnpm --filter=...[$SINCE] ls --depth -1
+          echo 'Changed projects, dependent projects and dependencies'
+          pnpm --filter=...[$SINCE]... ls --depth -1
+
+      - name: '[pnpm] install, build, test'
+        run: |
+          pnpm --filter=...[$SINCE]... install
+          pnpm --filter=...[$SINCE]... build
+          pnpm --filter=...[$SINCE] test
