--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,10 @@ jobs:
           path: ~/.pnpm-store
           key: ${{ runner.os }}-node${{ matrix.node-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
 
-      - name: '[pnpm] download pnpm binary'
-        run: curl -f https://get.pnpm.io/v6.14.js | node - add --global pnpm@6
+      - name: '[pnpm] Install pnpm'
+        uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 6.15.1
 
       - name: '[pnpm] configure SINCE git ref'
         run: |
