--- a/package.json
+++ b/package.json
@@ -10,16 +10,14 @@
   },
   "devDependencies": {
     "@types/jest": "27.0.3",
-    "esbuild-loader": "^2.18.0",
+    "esbuild": "^0.14.10",
     "husky": "^7.0.4",
     "jest": "^27.4.5",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
     "shx": "^0.3.3",
     "ts-jest": "^27.1.2",
-    "typescript": "4.5.4",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1"
+    "typescript": "4.5.4"
   },
   "scripts": {
     "format": "prettier \"**/*.{js,jsx,ts,tsx,json,md,yaml,yml}\" --write --ignore-path .gitignore"
