--- a/packages/image-q/tsconfig.compile.json
+++ b/packages/image-q/tsconfig.compile.json
@@ -1,9 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist/esm",
     "declarationDir": "dist/types",
-    "module": "esnext",
+    "emitDeclarationOnly": true,
     "types": ["node"],
     "tsBuildInfoFile": "./node_modules/.cache/tsc/tsconfig.build-esm.tsbuildinfo"
   },
